@startuml

title __SERVER's Class Diagram__\n

  namespace it.unipi.lsmsdb.stocksim.server.app {
    class it.unipi.lsmsdb.stocksim.server.app.Server {
    }
  }
  

  namespace it.unipi.lsmsdb.stocksim.server.app {
    class it.unipi.lsmsdb.stocksim.server.app.ServerUtil {
    }
  }
  

  namespace it.unipi.lsmsdb.stocksim.server.database {
    class it.unipi.lsmsdb.stocksim.server.database.CassandraQueryBuilder {
    }
  }
  

  namespace it.unipi.lsmsdb.stocksim.server.database {
    class it.unipi.lsmsdb.stocksim.server.database.DBManager {
    }
  }
  

  it.unipi.lsmsdb.stocksim.server.app.ServerUtil -up-|> it.unipi.lsmsdb.stocksim.lib.util.Util
  it.unipi.lsmsdb.stocksim.server.database.DBManager o-- it.unipi.lsmsdb.stocksim.lib.database.cassandra.CassandraDB : cassandraDB
  it.unipi.lsmsdb.stocksim.server.database.DBManager o-- it.unipi.lsmsdb.stocksim.lib.database.cassandra.CassandraDBFactory : cassandraDBFactory
  it.unipi.lsmsdb.stocksim.server.database.DBManager o-- it.unipi.lsmsdb.stocksim.lib.database.mongoDB.MongoDB : mongoDB
  it.unipi.lsmsdb.stocksim.server.database.DBManager o-- it.unipi.lsmsdb.stocksim.lib.database.mongoDB.MongoDBFactory : mongoDBFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
